# enterprise-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.json  production.example.json  qdrant.json
data/eval/: kg_retrieval_eval.json  retrieval_eval.json
data/raw/: confluence_manifest.example.json  enterprise_rag_notes.md  google_drive_manifest.example.json  kg_demo.md  s3_manifest.example.json  sharepoint_manifest.example.json
docs/: architecture.md  deployment_runbook.md  interview_guide.md  production_readiness.md  prompting_and_rag_eval.md
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: enterprise-rag.json
scripts/: demo.sh  load_test.py  smoke_test.py
src/enterprise_rag/: cli.py  config.py  models.py  text.py
src/enterprise_rag/api/: __init__.py  app.py
src/enterprise_rag/cache/: __init__.py  base.py  factory.py  in_memory.py  query.py  redis_cache.py
src/enterprise_rag/embeddings/: __init__.py  base.py  cached.py  factory.py  hashing.py  openai_embeddings.py
src/enterprise_rag/evaluation/: ab_testing.py  diagnostics.py  eval_generation.py  evidence_suggestion.py  experiments.py  index_inspection.py  llm_judge.py  metrics.py  readiness.py  reporting.py  retrieval_eval.py  self_healing_workflow.py
src/enterprise_rag/jobs/: queue.py  (+3 more)
tests/: test_ab_testing.py  test_access_control.py  test_answer_generation.py  test_api.py  test_audit.py  test_cache.py  test_citations.py  test_cli.py  test_config.py  test_connectors.py  test_costs.py  test_deployment_examples.py  test_diagnostics.py  test_docs.py  test_embeddings.py  test_eval_generation.py  test_evidence_suggestion.py  test_experiments.py  test_feedback.py  test_graph_rag.py  test_guardrails.py  test_index_inspection.py  test_index_version.py  test_ingest_job_runner.py  test_ingest_jobs.py  test_ingest_pipeline.py  test_job_queue.py  test_leases.py  test_llm_judge.py  test_load_test_script.py  test_log_analysis.py  test_observability.py  test_ocr.py  test_openai_client.py  test_pipeline.py  test_prompt_security.py  test_prompts.py  test_provider_resilience.py  test_qdrant_vector_index.py  test_query_engine.py  (+12 more)
(+62 files in other folders)
