[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise-style RAG pipeline with structured ingestion, hybrid retrieval, query rewriting, and self-healing hooks."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pypdf>=5",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.1",
    "pytest>=8",
    "ruff>=0.8",
]
qdrant = ["qdrant-client>=1.12"]
redis = ["redis>=5"]
openai = ["openai>=1.0"]

[project.scripts]
enterprise-rag = "enterprise_rag.cli:main"
enterprise-rag-api = "enterprise_rag.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
